Fixed some random UI bugs with case censitivity

--- a/Resources/labelsBundle.properties
+++ b/Resources/labelsBundle.properties
@@ -4,11 +4,13 @@ PLAYERNAME = Enter name of player %s
 PLAYERNAMEEXIST = Player name already exist. Enter name of player %s again.
 
 
+
 BUYSPACE = You buy %s for %s gold.
 DONTBUY = You don't have enough money to buy %s.
 RENTSPACE = You rent %s for %s gold.
 TERRDESC = Price: %s gold, Rent: %s gold.
 TAXONLAND = You lose %s gold.
+ALREADYOWNS = You already own %s.
 
 TRIBEENCAMPMENTNAME = Tribe Encampment
 CRATERNAME = Crater
